--- a/personal-assistant/package.json
+++ b/personal-assistant/package.json
@@ -8,17 +8,20 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "dev": "react-scripts start",
-    "lint": "npx eslint \"src/**/*.js\"",
+    "lint": "`npx eslint \"src/**/*.js\"`",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "@storybook/react": "^5.2.8",
+    "nanoid": "^2.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "styled-components": "^4.4.1",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
